wip: fix hamburger collapse

--- a/internal/frontend/static/style.css
+++ b/internal/frontend/static/style.css
@@ -201,7 +201,6 @@ header {
     }
 
     .app-container.sidebar-collapsed .sidebar {
-        margin-left: calc(-1 * var(--sidebar-width));
         width: 0;
         border-right: none;
     }
